--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
     "mongoose": "^8.17.0",
     "next": "^15.4.5",
     "react": "^19.1.1",
